Spline radius doesn't work proerly #102000

Closed
opened 2022-10-22 20:32:39 +02:00 by CHET · 16 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.3.1, branch: master, commit date: 2022-10-04 18:35, hash: b292cfe5a9

Short description of error
If the radius is 0, then when you try to change with hotkeys, the radius does not change
blender_i3yIcm0Iwp.mp4

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.3.1, branch: master, commit date: 2022-10-04 18:35, hash: `b292cfe5a9` **Short description of error** If the radius is 0, then when you try to change with hotkeys, the radius does not change [blender_i3yIcm0Iwp.mp4](https://archive.blender.org/developer/F13750709/blender_i3yIcm0Iwp.mp4)
Author

Added subscriber: @cheteron

Added subscriber: @cheteron

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This used to work before 2d1fe736fa, but due to issues like #96238 (shrinking to zero doesn't actually scales the radius to zero) it seemed better to follow the convention seen in other operators (which keep the value zero).

Zero multiplied by any value is zero, so it doesn't change.

But I recognize that such changes may not please in some cases. Therefore, I will add the same threshold as before for points with zero radius.

This used to work before 2d1fe736fa, but due to issues like #96238 (shrinking to zero doesn't actually scales the radius to zero) it seemed better to follow the convention seen in other operators (which keep the value zero). Zero multiplied by any value is zero, so it doesn't change. But I recognize that such changes may not please in some cases. Therefore, I will add the same threshold as before for points with zero radius.

Added subscriber: @edward88

Added subscriber: @edward88

@mano-wii GP strokes have the same problem. It is less likely to run into it, but once this happens it's actually worse because there is seemingly no easy way to change the radius anymore.

@mano-wii GP strokes have the same problem. It is less likely to run into it, but once this happens it's actually worse because there is seemingly no easy way to change the radius anymore.

This issue was referenced by b70bbfadfe

This issue was referenced by b70bbfadfecec049ad1ac2de7a949198ca6c15bc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-10-23 00:33:10 +02:00

Added subscriber: @antoniov

Added subscriber: @antoniov

@edward88, I don't feel safe making changes to Grease Pencil's Shrink/Fatten.
Maybe @antoniov or someone else on the #grease_pencil team can take a look and come up with a similar solution.

@edward88, I don't feel safe making changes to Grease Pencil's Shrink/Fatten. Maybe @antoniov or someone else on the #grease_pencil team can take a look and come up with a similar solution.

@mano-wii If I have understood properly the bug report, the problem is when you Shrink to 0.0 a point. In GPencil there is already a check to avoid this.... I cannot reproduce the problem and I can expand the point again...just need apply a bigger value.

These are the actual lines of the code:

 if (td->val) {
        *td->val = td->ival * ratio;
        /* apply PET */
        *td->val = interpf(*td->val, td->ival, td->factor);
        if (*td->val <= 0.0f) {
          *td->val = 0.001f;
        }
      }

As you can see there is a check to avoid 0 value, adding a small bias of 0.001.

Am I missing something?

@mano-wii If I have understood properly the bug report, the problem is when you Shrink to 0.0 a point. In GPencil there is already a check to avoid this.... I cannot reproduce the problem and I can expand the point again...just need apply a bigger value. These are the actual lines of the code: ``` if (td->val) { *td->val = td->ival * ratio; /* apply PET */ *td->val = interpf(*td->val, td->ival, td->factor); if (*td->val <= 0.0f) { *td->val = 0.001f; } } ``` As you can see there is a check to avoid 0 value, adding a small bias of 0.001. Am I missing something?

@mano-wii @antoniov Ah my bad, I'm sorry! It's just so small that i thought it would'nt expand anymore.

@mano-wii @antoniov Ah my bad, I'm sorry! It's just so small that i thought it would'nt expand anymore.

This comment was removed by @edward88

*This comment was removed by @edward88*

@antoniov, for GP's shrink/fatten operator this would basically be the same changes seen in 2d1fe736fa and b70bbfadfe but now for transform_mode_gpshrinkfatten.c.

While I can see why limiting radius scaling on curves can be an issue, I'm not sure if it's a problem for Grease Pencil.

@antoniov, for GP's shrink/fatten operator this would basically be the same changes seen in 2d1fe736fa and b70bbfadfe but now for `transform_mode_gpshrinkfatten.c`. - 2d1fe736fa Remove the radius limitation - b70bbfadfe Allows zero radius scaling While I can see why limiting radius scaling on curves can be an issue, I'm not sure if it's a problem for Grease Pencil.

This comment was removed by @edward88

*This comment was removed by @edward88*

I wish the comment deletion wouldn't leave traces of my stupid ideas x')

I wish the comment deletion wouldn't leave traces of my stupid ideas x')
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102000
No description provided.